# plex_unmonitorr

./: .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  pyproject.toml  run.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml  docker-image.yml
plex_unmonitorr/: config.py  library_service.py  logging_config.py  main.py  plex_client.py  process_media.py  radarr_client.py  sonarr_client.py
